Add getApplication API
