# server/src/main/java/hu/personal/opsystem/controller/ApplicationController.java
@@ -35,4 +35,9 @@ public class ApplicationController implements ApplicationApi {
     public ResponseEntity<List<ApplicationDto>> getAllApplication() {
         return ResponseEntity.ok(applicationService.getAll());
     }
+
+    @Override
+    public ResponseEntity<ApplicationDto> getApplication(Long appId) {
+        return ResponseEntity.ok(applicationService.getApplication(appId));
+    }
 }
